# dlt-tui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: REQUIREMENTS.md
src/: app.rs  explorer.rs  exporter.rs  fs_reader.rs  main.rs  parser.rs  tcp_client.rs  ui.rs
tests/: generate_sample_dlt.rs
