[package]
name = "dlt-tui"
version = "0.3.4"
edition = "2024"
authors = ["tkmsikd <tikeda1618@gmail.com>"]
description = "A fast, keyboard-centric TUI viewer for Automotive DLT (Diagnostic Log and Trace) files"
license = "MIT"
repository = "https://github.com/tkmsikd/dlt-tui"
homepage = "https://github.com/tkmsikd/dlt-tui"
readme = "README.md"
keywords = ["dlt", "tui", "automotive", "log-viewer", "diagnostics"]
categories = ["command-line-utilities", "visualization"]
exclude = ["sample.dlt", "tests/generate_sample_dlt.rs"]

[dependencies]
chrono = "0.4.44"
crossterm = "0.29.0"
flate2 = "1.1.9"
nom = "8.0.0"
ratatui = { version = "0.30.0", features = ["all-widgets"] }
regex = "1.12.3"
zip = "8.1.0"

[dev-dependencies]
tempfile = "3.25.0"
